test/files/neg/macro-deprecate-idents/Macros_Trait_8.scala
package test8

trait macro
